[fix] footer stuck to bottom with flex

--- a/sass/base/_general-styles.scss
+++ b/sass/base/_general-styles.scss
@@ -19,6 +19,9 @@ body {
 }
 
 main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   max-width: 95em;
   margin: auto;
 }
