--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -6,13 +6,14 @@
 //page outside of "menu section" = background image
 .main {
   background-color: darken(var.$bg-primary, 5%);
+  flex: 1 1 auto;
   &__img {
     width: 100%;
     height: 250px;
     object-fit: cover;
-    @include mix.breakpoint(xxl) {
-      height: 23vh;
-    }
+    // @include mix.breakpoint(xxl) {
+    //   height: 23vh;
+    // }
   }
 }
 
@@ -28,10 +29,10 @@
   @include mix.breakpoint(sm) {
     padding: 35px auto 60px auto;
   }
-  @include mix.breakpoint(xxl) {
-    height: 61.5vh;
-    padding-top: 5%;
-  }
+  // @include mix.breakpoint(xxl) {
+  //   height: 61.5vh;
+  //   padding-top: 5%;
+  // }
   //header section = restaurant name + heart icon
   &__header {
     display: flex;
